fix(animations): remove overflow from styles in steps and expansion-panel (#374)
* fix(): remove overflow from styles in steps and expansion-panel

tdCollapse animation needs overflow: hidden, but it was affecting the content of both components. Now we only add overflow: hidden when its animating.

* fix(): negate variable instead of setting true/false

* fix(): unit tests fix

--- a/src/platform/core/expansion-panel/expansion-panel.component.scss
+++ b/src/platform/core/expansion-panel/expansion-panel.component.scss
@@ -39,7 +39,3 @@ md-nav-list {
   text-overflow: ellipsis;
   margin-right: 5px;
 }
-.td-expansion-content,
-.td-expansion-summary {
-  overflow: hidden; // FF50 bugfix since overflow style in animation doesnt work
-}
